# SmartChatBot

./: README.md  database_schema.py  llm_service.py  pyproject.toml  test_notebook.ipynb  vector_database.py  web_interface.py
db_nomic/: dog_behavior_configs.json  dog_behavior_papers.json
